--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+before_script:
+  - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.autobleem.tk/root/autobleem.git”.insteadOf git@gitlab.autobleem.tk:root/autobleem.git
+
+
 variables:
   GIT_SUBMODULE_STRATEGY: normal
 
