[feature/game_played_time_stamp]: add datetimeformat to config.ini.  defaults to %F %I:%M:%S %p. for formatting choices see http://www.cplusplus.com/reference/ctime/strftime/

--- a/src/resources/config.ini
+++ b/src/resources/config.ini
@@ -1,6 +1,8 @@
 [AutoBleem]
 Aspect=false
 Cfg=/media/Autobleem/rc/autobleem_cfg.sh
+# for date time format choices see: http://www.cplusplus.com/reference/ctime/strftime/
+Datetimeformat=%F %I:%M:%S %p
 Mip=false
 Nomusic=false
 Origames=true
