[feature/KernelRelease]: split the time routines out of util to util_time so starter doesn't need to include gui.h in util.h. including gui.h caused a ton of stuff to have to be included in order to link.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,7 +195,7 @@ add_executable(
         src/code/util.h
         src/code/ver_migration.cpp
         src/code/ver_migration.h
-		)
+        src/code/util_time.h src/code/util_time.cpp)
 
 target_include_directories(autobleem-gui PUBLIC
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/sqlite>
