--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ if (CMAKE_SYSTEM_PROCESSOR MATCHES "^arm" )
         message(STATUS "Newer GCC installed")
 	else()
 		message(STATUS "CXX Compiler Version <= 8")
-		SET(CMAKE_C_FLAGS "-mfloat-abi=hard -march=armv7ve -g -O0")
-		SET(CMAKE_CXX_FLAGS "-mfloat-abi=hard -march=armv7ve -g -O0")
+		SET(CMAKE_C_FLAGS "-mfloat-abi=hard -march=armv7ve -s -Os")
+		SET(CMAKE_CXX_FLAGS "-mfloat-abi=hard -march=armv7ve -s -Os")
 	endif()
 
 	include_directories(src/include "/opt/toolchain/armv8-sony-linux-gnueabihf/sysroot/usr/include")
