[feature/Sinden_lightgun]: added a list of serials of light gun games.  displays a light gun icon in the PS1 carousel if the game is a light gun game.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,8 @@ add_executable(
         src/code/DebugTimer.h
         src/code/DirEntry.cpp
         src/code/DirEntry.h
+		src/code/lightgunSerials.cpp
+		src/code/lightgunSerials.h
         src/code/engine/cardedit.cpp
         src/code/engine/cardedit.h
         src/code/engine/cfgprocessor.cpp
